--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/QuizViewController/QuizViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/QuizViewController/QuizViewController.xib
@@ -32,10 +32,10 @@
                     </connections>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IHp-w4-msV" userLabel="Fade View">
-                    <rect key="frame" x="0.0" y="662" width="414" height="200"/>
+                    <rect key="frame" x="0.0" y="687" width="414" height="175"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="200" id="Br8-ll-wKB"/>
+                        <constraint firstAttribute="height" constant="175" id="Br8-ll-wKB"/>
                     </constraints>
                 </view>
                 <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KhT-hP-MYC">
@@ -59,6 +59,9 @@
                         <color key="baseForegroundColor" name="FinishColor"/>
                         <color key="baseBackgroundColor" name="ProfileLogoutButtonColor"/>
                     </buttonConfiguration>
+                    <connections>
+                        <action selector="finishExam" destination="-1" eventType="touchUpInside" id="QBU-Yz-mna"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
