--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/GradesViewController/GradesViewController.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/GradesViewController/GradesViewController.xib
@@ -4,12 +4,19 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GradesViewController" customModule="Internship2022TeamSzabi" customModuleProvider="target">
             <connections>
+                <outlet property="firstSemesterButton" destination="LzD-uh-Hql" id="WuM-co-J4A"/>
+                <outlet property="gradesTableView" destination="ueL-6f-dIK" id="hI0-DG-9Eb"/>
+                <outlet property="navStackView" destination="Myo-3z-4N4" id="Dw5-A4-d8b"/>
+                <outlet property="navView" destination="30d-cg-OGK" id="ySl-oF-Djf"/>
+                <outlet property="secondSemesterButton" destination="Pt4-mD-Apt" id="N0i-wi-aW6"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,9 +24,80 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ueL-6f-dIK">
+                    <rect key="frame" x="0.0" y="77.5" width="414" height="784.5"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="GBK-lm-j1b"/>
+                        <outlet property="delegate" destination="-1" id="4Ev-JC-xID"/>
+                    </connections>
+                </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="30d-cg-OGK" userLabel="navView">
+                    <rect key="frame" x="0.0" y="44" width="414" height="33.5"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Myo-3z-4N4">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="33.5"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LzD-uh-Hql">
+                                    <rect key="frame" x="0.0" y="0.0" width="207" height="33.5"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="tintColor" name="TabBarSelectedColor"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="plain" title="First semester">
+                                        <fontDescription key="titleFontDescription" name="InterV_Medium" family="Inter V" pointSize="16"/>
+                                    </buttonConfiguration>
+                                    <connections>
+                                        <action selector="firstSemesterTap:" destination="-1" eventType="touchUpInside" id="nqc-0M-lck"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pt4-mD-Apt">
+                                    <rect key="frame" x="207" y="0.0" width="207" height="33.5"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="tintColor" name="TabBarSelectedColor"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="plain" title="Second semester">
+                                        <fontDescription key="titleFontDescription" name="InterV_Medium" family="Inter V" pointSize="16"/>
+                                    </buttonConfiguration>
+                                    <connections>
+                                        <action selector="secondSemesterTap:" destination="-1" eventType="touchUpInside" id="Z82-7b-ACh"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="tintColor" systemColor="tintColor"/>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="Myo-3z-4N4" firstAttribute="top" secondItem="30d-cg-OGK" secondAttribute="top" id="6E7-4V-RXO"/>
+                        <constraint firstItem="Myo-3z-4N4" firstAttribute="leading" secondItem="30d-cg-OGK" secondAttribute="leading" id="R4d-J8-7G5"/>
+                        <constraint firstAttribute="trailing" secondItem="Myo-3z-4N4" secondAttribute="trailing" id="Rab-Xu-L4L"/>
+                        <constraint firstAttribute="bottom" secondItem="Myo-3z-4N4" secondAttribute="bottom" id="pSf-a6-zDd"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <point key="canvasLocation" x="132" y="81"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ueL-6f-dIK" secondAttribute="trailing" id="8lO-Ue-D9g"/>
+                <constraint firstItem="ueL-6f-dIK" firstAttribute="top" secondItem="30d-cg-OGK" secondAttribute="bottom" id="FbY-aL-eSB"/>
+                <constraint firstItem="30d-cg-OGK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="ZYi-rO-9hC"/>
+                <constraint firstItem="30d-cg-OGK" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="e4J-3f-lf9"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="ueL-6f-dIK" secondAttribute="bottom" id="eak-XP-VrM"/>
+                <constraint firstItem="30d-cg-OGK" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="oXV-No-Hfm"/>
+                <constraint firstItem="ueL-6f-dIK" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="ysr-Ag-z0A"/>
+            </constraints>
+            <point key="canvasLocation" x="255" y="11"/>
         </view>
     </objects>
+    <resources>
+        <namedColor name="TabBarSelectedColor">
+            <color red="0.47058823529411764" green="0.78823529411764703" blue="0.82352941176470584" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
