--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/GradesViewController/GradesTableViewCell.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/GradesViewController/GradesTableViewCell.xib
@@ -17,7 +17,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ActiveGradesTableViewCell" rowHeight="80" id="KGk-i7-Jjw" customClass="ActiveGradesTableViewCell" customModule="Internship2022TeamSzabi" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GradesTableViewCell" rowHeight="80" id="KGk-i7-Jjw" customClass="GradesTableViewCell" customModule="Internship2022TeamSzabi" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="328" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -55,12 +55,24 @@
                                 <color key="textColor" red="0.1450980392" green="0.086274509799999996" blue="0.019607843140000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ih8-3W-nYL" userLabel="Slash">
+                                <rect key="frame" x="249" y="27.5" width="35" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="6kv-SI-qAE"/>
+                                    <constraint firstAttribute="width" constant="35" id="9zQ-iA-vjc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="InterV_Bold" family="Inter V" pointSize="25"/>
+                                <color key="textColor" red="0.48235297199999999" green="0.47843140360000003" blue="0.48235297199999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" name="RegisterBackgroundColor"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ih8-3W-nYL" secondAttribute="trailing" constant="20" id="0Y3-fA-OZi"/>
                             <constraint firstItem="DT9-WD-FTs" firstAttribute="centerY" secondItem="8xX-RE-nHR" secondAttribute="centerY" id="9ih-U6-j3P"/>
                             <constraint firstItem="MTC-Gw-E6y" firstAttribute="leading" secondItem="DT9-WD-FTs" secondAttribute="trailing" constant="20" id="TJ0-jd-TP1"/>
+                            <constraint firstItem="ih8-3W-nYL" firstAttribute="centerY" secondItem="8xX-RE-nHR" secondAttribute="centerY" id="aLr-rs-bc9"/>
                             <constraint firstItem="MTC-Gw-E6y" firstAttribute="leading" secondItem="DT9-WD-FTs" secondAttribute="trailing" constant="20" id="eG9-RN-ZGp"/>
                             <constraint firstItem="MTC-Gw-E6y" firstAttribute="centerY" secondItem="8xX-RE-nHR" secondAttribute="centerY" id="oXS-lc-AXE"/>
                             <constraint firstAttribute="trailing" secondItem="sSf-ne-Mq8" secondAttribute="trailing" constant="20" id="u1w-by-l4b"/>
@@ -82,12 +94,13 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="activeCellView" destination="8xX-RE-nHR" id="ktj-gf-RFQ"/>
+                <outlet property="cellView" destination="8xX-RE-nHR" id="ktj-gf-RFQ"/>
                 <outlet property="grade" destination="sSf-ne-Mq8" id="cJW-nl-FOA"/>
                 <outlet property="icon" destination="DT9-WD-FTs" id="9pf-Nl-FrP"/>
                 <outlet property="name" destination="MTC-Gw-E6y" id="F9e-tp-Piz"/>
+                <outlet property="slash" destination="ih8-3W-nYL" id="Si2-84-uGh"/>
             </connections>
-            <point key="canvasLocation" x="196" y="2"/>
+            <point key="canvasLocation" x="229" y="-1"/>
         </tableViewCell>
     </objects>
     <resources>
