--- a/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/CoursesViewController/CoursesCollectionViewCell.xib
+++ b/Internship2022TeamSzabi/Internship2022TeamSzabi/Views/CoursesViewController/CoursesCollectionViewCell.xib
@@ -31,7 +31,7 @@
                                 <color key="textColor" red="0.48627450980392156" green="0.47843137254901957" blue="0.47843137254901957" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2um-Zi-bRU">
+                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2um-Zi-bRU">
                                 <rect key="frame" x="18.666666666666671" y="111.66666666666667" width="143" height="37.333333333333329"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="143" id="L8t-BC-Z0y"/>
